--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h2>HTML Forms</h2>
 
-<form action="/action_page.php">
+<form action="/segunda página">
   <label for="fname">Primeiro nome:</label><br>
   <input type="text" id="fname" name="fname" value="Samuel"><br>
   <label for="lname">Sobremome:</label><br>
