--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h2>HTML Forms</h2>
 
-<form action="/segunda página">
+<form action="/meio pagina">
   <label for="fname">Primeiro nome:</label><br>
   <input type="text" id="fname" name="fname" value="Samuel"><br>
   <label for="lname">Sobremome:</label><br>
@@ -12,7 +12,7 @@
   <input type="submit" value="Confirmar">
 </form> 
 
-<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
+<p>If you click the "Submit" button, the form-data will be sent to a page called "/meio pagina".</p>
 
 </body>
 </html>
