--- a/meio pagina.html
+++ b/meio pagina.html
@@ -6,7 +6,7 @@
 
 <p>The min and max attributes specify the minimum and maximum values for an input element.</p>
 
-<form action="/action_page.php">
+<form action="/ultima pagina">
   <label for="datemax">Enter a date before 1980-01-01:</label>
   <input type="date" id="datemax" name="datemax" max="1979-12-31"><br><br>
 
