--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2>HTML Forms</h2>
+<h2>Identidade</h2>
 
 <form action="/meio pagina">
   <label for="fname">Primeiro nome:</label><br>
@@ -12,7 +12,7 @@
   <input type="submit" value="Confirmar">
 </form> 
 
-<p>If you click the "Submit" button, the form-data will be sent to a page called "/meio pagina".</p>
+<p>If you click the "Comfirmar" button, the form-data will be sent to a page called "/meio pagina".</p>
 
 </body>
 </html>
