--- a/meio pagina.html
+++ b/meio pagina.html
@@ -16,7 +16,7 @@
   <label for="quantity">Quantity (between 1 and 5):</label>
   <input type="number" id="quantity" name="quantity" min="1" max="5"><br><br>
 
-  <input type="submit" value="Submit">
+  <input type="Comfirmar" value="Comfirmar">
 </form>
 
 </body>
