--- a/meio pagina.html
+++ b/meio pagina.html
@@ -6,7 +6,7 @@
 
 <p>The min and max attributes specify the minimum and maximum values for an input element.</p>
 
-<form action="/action_page.php">
+<form action="/ultima pagina">
   <label for="datemax">Enter a date before 1980-01-01:</label>
   <input type="date" id="datemax" name="datemax" max="1979-12-31"><br><br>
 
@@ -16,7 +16,7 @@
   <label for="quantity">Quantity (between 1 and 5):</label>
   <input type="number" id="quantity" name="quantity" min="1" max="5"><br><br>
 
-  <input type="submit" value="Submit">
+  <input type="Confirmar" value="Submit">
 </form>
 
 </body>
