--- a/ultima pagina.html
+++ b/ultima pagina.html
@@ -6,7 +6,7 @@
 
 <p>The select element defines a drop-down list:</p>
 
-<form action="/index.html">
+<form action="/action_page.php">
   <label for="cars">Choose a car:</label>
   <select id="cars" name="cars">
     <option value="volvo">Volvo</option>
@@ -14,7 +14,7 @@
     <option value="fiat">Fiat</option>
     <option value="audi">Audi</option>
   </select>
-  <input type="Comfirmar">
+  <input type="submit">
 </form>
 
 </body>
